--- a/src/pages/css/rule_cards.css
+++ b/src/pages/css/rule_cards.css
@@ -37,11 +37,11 @@
   border-color: #2A95E7;
 }
 
-.panel-modifyHeaders-rule {
+.panel-headers-rule {
   border-color: #dd9d12;
 }
 
-.panel-modifyHeaders-rule > .panel-heading {
+.panel-headers-rule > .panel-heading {
   background-color: #dd9d12;
   border-color: #dd9d12;
 }
