@trivial Requestly header color change

--- a/src/pages/css/styles.css
+++ b/src/pages/css/styles.css
@@ -24,7 +24,8 @@ select {
 }
 
 .header {
-  background: #4c66a4;
+  /* background: #4c66a4; */
+  background: #3c3c3c;
   height: 35px;
   line-height: 35px;
   font-size: 14px;
