--- a/src/pages/css/editor.css
+++ b/src/pages/css/editor.css
@@ -1,5 +1,5 @@
 .name-container {
-  width: 600px;
+  width: 590px;
   float: left;
 }
 
@@ -28,6 +28,15 @@
   margin: 0;
   border-radius: 2px;
   padding: 5px;
+}
+
+.pair-container:first-child:last-child .delete-pair {
+  display: none;
+}
+
+.pair-container .input-group {
+  display: inline-table;
+  padding: 10px 5px;
 }
 
 .buttons-container .btn {
