--- a/src/pages/css/redirect_rule.css
+++ b/src/pages/css/redirect_rule.css
@@ -1,13 +1,26 @@
-#redirect-rule-editor .source-container .source-value-input {
+#redirect-rule-editor .name-container {
+  float: none;
+}
+
+#redirect-rule-editor .rule-status-container {
+  padding-right: 0;
+  float: none;
+}
+
+#redirect-rule-editor .pair-container:first-child:last-child .source-value-input {
+  width: 615px;
+}
+
+#redirect-rule-editor .source-value-input {
   display: inline-block;
-  width: 580px;
+  width: 570px;
 }
 
-#redirect-rule-editor .source-container > * {
-  padding-right: 4px;
+#redirect-rule-editor .input-group.destination-container {
+  padding: 0;
 }
 
-#save-redirect-rule {
+#redirect-rule-editor .save-rule {
   background-color: #5B9027;
   border-color: #5B9027;
 }
