--- a/src/pages/css/cancel_rule.css
+++ b/src/pages/css/cancel_rule.css
@@ -1,9 +1,9 @@
-.cancel-rule-editor .rule-header {
+#cancel-rule-editor .rule-header {
   background: #d32a0e;
   border-color: #b1240c;
 }
 
-.cancel-rule-editor .save-button {
+#cancel-rule-editor .save-button {
   background: #d32a0e;
   border-color: #b1240c;
   color: white;
