--- a/src/pages/css/index.css
+++ b/src/pages/css/index.css
@@ -24,6 +24,11 @@
 
 .ruleName {
   cursor: pointer;
+  max-width: 30rem;
+  display: inline-block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .ruleName:hover {
@@ -53,20 +58,25 @@ table tr:hover td {
 }
 
 /* RuleType Row specific properties */
-.redirect.rule-item-row {
-  border-left: 10px solid #5B9027;
+.rule-item-row .rule-type {
+  border-radius: 3px;
+  vertical-align: top;
 }
 
-.cancel.rule-item-row {
-  border-left: 10px solid #d32a0e;
+.redirect.rule-item-row .rule-type {
+  background-color: #5B9027;
 }
 
-.replace.rule-item-row {
-  border-left: 10px solid #2A95E7;
+.cancel.rule-item-row .rule-type {
+  background-color: #d32a0e;
 }
 
-.headers.rule-item-row {
-  border-left: 10px solid #dd9d12;
+.replace.rule-item-row .rule-type {
+  background-color: #2A95E7;
+}
+
+.headers.rule-item-row .rule-type {
+  background-color: #dd9d12;
 }
 
 .redirect .toggle-status-icon.redirect.active {
