Issue #56 Allow export of selective rules

--- a/src/pages/css/index.css
+++ b/src/pages/css/index.css
@@ -58,6 +58,10 @@ table tr:hover td {
 }
 
 /* RuleType Row specific properties */
+.rule-item-row td:first-child {
+  vertical-align: top;
+}
+
 .rule-item-row .rule-type {
   border-radius: 3px;
   vertical-align: top;
