--- a/src/pages/css/rule_cards.css
+++ b/src/pages/css/rule_cards.css
@@ -3,6 +3,11 @@
   display: inline-block;
   margin: 10px;
   border-radius: 0;
+  cursor: pointer;
+}
+
+.panel:hover {
+  background-color: #d2e6f5 !important;
 }
 
 .panel > .panel-heading {
@@ -46,17 +51,10 @@
   border-color: #dd9d12;
 }
 
-.select-icon {
-  float: right;
-  background: #aaa;
-  color: #ccc;
-  font-size: 10px;
-  padding: 6px;
-  border-radius: 2px;
-  margin-top: -3px;
-}
-
-.panel.selected .select-icon {
-  background: #3071a9;
+.back-button {
+  transform: scaleX(-1); /* reverse icon not available in bootstrap glyphicon library */
+  margin-right: 0.5rem;
   color: white;
+  text-decoration: none !important;
+  padding: 0 0.5rem;
 }
