--- a/src/pages/css/index.css
+++ b/src/pages/css/index.css
@@ -13,6 +13,7 @@
 
 .rule-index > table tr:first-child th {
   border-bottom: 0;
+  background-color: #f5f5f5;
 }
 
 .table > tbody > tr > td {
@@ -47,7 +48,8 @@
   width: 110px;
 }
 
-table tr:hover td {
+table tr:hover td,
+table tr.selected td {
   background-color: #d2e6f5 !important;
   border-color: #aacdf0 !important;
 }
