--- a/src/pages/css/index.css
+++ b/src/pages/css/index.css
@@ -7,11 +7,11 @@
   margin-left: 5px;
 }
 
-.rule-index > table {
+.rule-index > .table {
   font-size: 14px;
 }
 
-.rule-index > table tr:first-child th {
+.rule-index > .table tr:first-child th {
   border-bottom: 0;
   background-color: #f5f5f5;
 }
@@ -49,8 +49,8 @@
   text-align: center;
 }
 
-table tr:hover td,
-table tr.selected td {
+.table tr:hover td,
+.table tr.selected td {
   background-color: #d2e6f5 !important;
   border-color: #aacdf0 !important;
 }
