--- a/src/pages/templates/CancelRuleEditor.hbs
+++ b/src/pages/templates/CancelRuleEditor.hbs
@@ -3,32 +3,7 @@
 </nav>
 
 <section class="rule-body">
-  <table><tr>
-    <td>
-      <div class="input-group name-container">
-        <span class="input-group-addon">Rule Name</span>
-        <input type="text" class="form-control rule-name-input" placeholder="" value="{{name}}">
-      </div>
-    </td>
-
-    <td>
-      <div class="rule-status-container">
-        <span class="title">Status</span>
-        <span class="dropdown-container">
-          <select class="rule-status-select">
-            <option value="{{RULE_STATUS.ACTIVE}}" {{#equals status RULE_STATUS.ACTIVE}}selected{{/equals}}>Active</option>
-            <option value="{{RULE_STATUS.INACTIVE}}" {{#equals status RULE_STATUS.INACTIVE}}selected{{/equals}}>Inactive</option>
-          </select>
-        </span>
-      </div>
-    </td>
-  </tr></table>
-
-  <div class="description-container">
-    <div class="title">Rule Description (Optional)</div>
-    <textarea class="rule-description"
-              placeholder="e.g. Blocking thirdparty.js">{{description}}</textarea>
-  </div>
+  {{> RuleProperties}}
 
   <div class="title">
     <span class="left">Enter Keywords or Urls or Domains to be blocked</span>
@@ -57,7 +32,6 @@
         </div>
       </div>
     {{/each}}
-  </div>
   </div>
 
   <div class="buttons-container">
