--- a/src/pages/templates/RedirectRuleEditor.hbs
+++ b/src/pages/templates/RedirectRuleEditor.hbs
@@ -16,22 +16,9 @@
 
   <div class="pairs-container">
     {{#each pairs}}
+      {{> SourceField}}
+
       <div class="well well-sm pair-container" data-index="{{@index}}">
-        <div class="source-container">
-          <div class="dropdown-container">
-            <select class="source-operator-select" data-key="source.operator">
-              <option value="{{../RULE_OPERATORS.EQUALS}}" {{#equals source.operator ../RULE_OPERATORS.EQUALS}}selected{{/equals}}>Url Equals</option>
-              <option value="{{../RULE_OPERATORS.CONTAINS}}" {{#equals source.operator ../RULE_OPERATORS.CONTAINS}}selected{{/equals}}>Url Contains</option>
-              <option value="{{../RULE_OPERATORS.MATCHES}}" {{#equals source.operator ../RULE_OPERATORS.MATCHES}}selected{{/equals}}>Url Matches</option>
-            </select>
-          </div>
-
-          <input type="text" class="form-control source-value-input" data-key="source.value"
-             value="{{source.value}}" placeholder="{{sourcePlaceholder}}" />
-
-          <span class="glyphicon glyphicon-trash delete-pair action-icon"></span>
-        </div>
-
         <div class="input-group destination-container">
           <span class="input-group-addon">Destination</span>
           <input type="url" class="form-control destination-url-input" data-key="destination"
