--- a/src/pages/css/cancel_rule.css
+++ b/src/pages/css/cancel_rule.css
@@ -3,6 +3,16 @@
   border-color: #b1240c;
 }
 
+#cancel-rule-editor .source-value-input {
+  width: 565px;
+  display: inline-block;
+  margin-left: 10px;
+}
+
+#cancel-rule-editor .pair-container:first-child:last-child .source-value-input {
+  width: 605px;
+}
+
 #cancel-rule-editor .save-button {
   background: #d32a0e;
   border-color: #b1240c;
