Issue #55: Passed Data to Partials since partials can not read parent context

--- a/src/pages/templates/RedirectRuleEditor.hbs
+++ b/src/pages/templates/RedirectRuleEditor.hbs
@@ -16,7 +16,7 @@
 
   <div class="pairs-container">
     {{#each pairs}}
-      {{> SourceField}}
+      {{> SourceField RULE_OPERATORS=../RULE_OPERATORS}}
 
       <div class="well well-sm pair-container" data-index="{{@index}}">
         <div class="input-group destination-container">
