--- a/src/pages/css/cancel_rule.css
+++ b/src/pages/css/cancel_rule.css
@@ -9,6 +9,14 @@
   margin-left: 10px;
 }
 
+#cancel-rule-editor .dropdown-container {
+  padding-bottom: 0;
+}
+
+#cancel-rule-editor .well-sm {
+  margin-bottom: 10px;
+}
+
 #cancel-rule-editor .pair-container:first-child:last-child .source-value-input {
   width: 605px;
 }
