--- a/src/pages/css/styles.css
+++ b/src/pages/css/styles.css
@@ -8,6 +8,7 @@ body {
 
 a:hover {
   color: inherit;
+  text-decoration: none;
 }
 
 select {
@@ -76,7 +77,7 @@ table {
   font-size: 16px;
   color: #fff;
   background: green;
-  padding: 5px 0px 5px 8px;
+  padding: 5px 0 5px 8px;
   margin-right: 5px;
   border-radius: 2px;
 }
@@ -92,21 +93,15 @@ table {
 #forkme_banner {
   background: url('/resources/images/blacktocat.png') #0090ff no-repeat 95% 50%;
   border-radius: 2px;
-  padding: -1px 50px 10px 0px;
+  padding: 0 50px 0 10px;
   position: fixed;
-  right:0px;
-}
-
-#Chrome_banner{
- background: url('/resources/images/chrome_icon.png') green no-repeat 95% 50%;
-  border-radius: 2px;
-  padding: 7px 50px 7px 10px;
-  background-size:30px;
+  right: 0;
 }
 
 #chromestore_banner {
   background: url('/resources/images/chrome_icon.png') #53a93f no-repeat 95% 50%;
   background-size: 30px;
+  padding: 10px 50px 10px 10px;
 }
 
 .right {
