Issue #49 [2] Migrated Rule Index Template to Handlebars

--- a/src/pages/templates/partials/_StatusToggle.hbs
+++ b/src/pages/templates/partials/_StatusToggle.hbs
@@ -1,4 +1,4 @@
 <span title="Click to toggle Rule Status">
-  <input type="checkbox" data-toggle="toggle" class="status-toggle" data-on="{{RULE_STATUS.ACTIVE}}"
-         data-off="{{RULE_STATUS.INACTIVE}}" {{#equals status RULE_STATUS.ACTIVE}}checked{{/equals}} />
+  <input type="checkbox" data-toggle="toggle" class="status-toggle" data-on="Active" data-off="Inactive"
+         {{#equals status "Active"}}checked{{/equals}} />
 </span>
