Issue #50 [8][9] Requestly Settings UI & enable/disable listeners when settings are saved

--- a/src/pages/css/headers_rule.css
+++ b/src/pages/css/headers_rule.css
@@ -1,4 +1,4 @@
-.headers-rule-editor .rule-header {
+.headers-rule-editor .content-header {
   background-color: #dd9d12;
   border-color: #dd9d12;
 }
