--- a/src/pages/css/replace_rule.css
+++ b/src/pages/css/replace_rule.css
@@ -1,4 +1,4 @@
-.replace-rule-editor .rule-header {
+.replace-rule-editor .content-header {
   background-color: #2A95E7;
   border-color: #2A95E7;
 }
