--- a/src/pages/css/styles.css
+++ b/src/pages/css/styles.css
@@ -166,7 +166,7 @@ table {
   background-color: #DF731F;
 }
 
-.rule-header {
+.content-header {
   padding: 10px;
   color: white;
   font-size: 14px;
