--- a/src/pages/templates/partials/_Toolbar.hbs
+++ b/src/pages/templates/partials/_Toolbar.hbs
@@ -1,4 +1,4 @@
-<nav class="rule-header rq-dimgrey">
+<nav class="content-header rq-dimgrey">
   <span>Rules</span>
   <span class="rules-number badge">{{ rules.length }}</span>
   <div class="right right-corner-icongroup">
@@ -17,7 +17,7 @@
       <span>Import</span>
     </button>
 
-    <a href="#rq-settings" role="button" class="settings-button">
+    <a href="#settings/requestly" role="button" class="settings-button">
       <span class="glyphicon glyphicon-cog settings-icon"></span>
     </a>
   </div>
