--- a/src/pages/templates/RedirectRuleEditor.hbs
+++ b/src/pages/templates/RedirectRuleEditor.hbs
@@ -1,4 +1,4 @@
-<nav class="rule-header rq-green">
+<nav class="content-header rq-green">
   <a href="#selectRule" role="button" class="back-button glyphicon glyphicon-share-alt" aria-hidden="true" title="Go Back"></a>
   <span>Redirect Request Rule</span>
 </nav>
