Issue #50: [10][11] Enable/Disable from right click and remove Settings Icon

--- a/src/pages/templates/RequestlySettings.hbs
+++ b/src/pages/templates/RequestlySettings.hbs
@@ -3,14 +3,4 @@
   <span>Requestly Settings</span>
 </nav>
 
-<section class="settings-body">
-  <div class="toggle-extension-setting">
-    <span title="Click to toggle Requestly">
-      <input type="checkbox" data-toggle="toggle" class="extension-toggle" data-on="Enabled" data-off="Disabled"
-           {{#equals isExtensionEnabled true}}checked{{/equals}} />
-      <p class="setting-description">
-        If you disable Requestly, no Rules will be executed.
-      </p>
-    </span>
-  </div>
-</section>
+<section class="settings-body"></section>
