--- a/src/pages/css/styles.css
+++ b/src/pages/css/styles.css
@@ -240,10 +240,12 @@ table {
   background-color: #d32a0e;
 }
 
+.replace .status-cell .toggle-on.btn,
 .status-toggle.replace + .toggle-group .toggle-on.btn {
   background-color: #2A95E7;
 }
 
+.headers .status-cell .toggle-on.btn,
 .status-toggle.headers + .toggle-group .toggle-on.btn {
   background-color: #dd9d12;
 }
