Issue #89: Rule Index Screen Header Updated with MDB

--- a/src/pages/templates/RuleIndex.hbs
+++ b/src/pages/templates/RuleIndex.hbs
@@ -5,8 +5,10 @@
     <thead>
     <tr>
       <th class="rule-selection-cell">
-        <input type="checkbox" class="select-all-rules-checkbox" title="Select All"/>
+        <input type="checkbox" class="filled-in select-all-rules-checkbox" id="select-all-rules-checkbox" title="Select All"/>
+        <label for="select-all-rules-checkbox"></label>
       </th>
+      <th></th>
       <th>Name & Description</th>
       <th class="status-cell">Status</th>
       <th>Created on</th>
