--- a/src/pages/templates/partials/_RuleItemRow.hbs
+++ b/src/pages/templates/partials/_RuleItemRow.hbs
@@ -1,15 +1,24 @@
 <tr class="rule-item-row {{toLowerCase ruleType}}" data-id="{{id}}">
   <td class="rule-selection-cell">
-    <input type="checkbox" class="select-rule-checkbox" title="Select Rule"/>
+    <input type="checkbox" class="filled-in select-rule-checkbox" id="filled-in-box-{{id}}" title="Select Rule"/>
+    <label for="filled-in-box-{{id}}"></label>
   </td>
-  <td class="rule-name-cell">
+
+  <td class="rule-badge-cell">
     <span class="rule-type badge">{{charAt ruleType 0}}</span>
+  </td>
+
+  <td class="rule-name-cell">
     <a class="ruleName">{{ name }}</a>
     <div class="ruleDescription">{{ description }}</div>
   </td>
+
   <td class="status-cell"> {{> StatusToggle }} </td>
+
   <td>{{formatDate creationDate}}</td>
+
   <td>
-    <span class="glyphicon glyphicon-trash delete-rule-icon action-icon" title="Delete Rule"></span>
+    <span class="fa fa-trash delete-rule-icon action-icon" title="Delete Rule"></span>
   </td>
+
 </tr>
