Issue #89: Rule Cards: Panels replaced with MDB Testimonial Cards

--- a/src/pages/templates/RuleCardsView.hbs
+++ b/src/pages/templates/RuleCardsView.hbs
@@ -1,49 +1,65 @@
 <nav class="content-header rq-dimgrey">
-  <a href="#" role="button" class="back-button glyphicon glyphicon-share-alt" aria-hidden="true" title="Go Back"></a>
+  <a href="#" role="button" class="back-button fa fa-chevron-left" title="Go Back"></a>
   <span>Select Rule</span>
 </nav>
 <section class="rule-body">
-  <div class="panel panel-redirect-rule" data-target="#new/Redirect">
-    <div class="panel-heading">
-      <h3 class="panel-title">
-        <span>Redirect Request</span>
-      </h3>
+  <div class="row">
+    <div class="col-md-6 card-redirect-rule rule-card" data-target="#new/Redirect">
+      <div class="testimonial-card z-depth-1">
+        <div class="card-up">
+        </div>
+        <div class="avatar">
+          <span class="img-circle img-responsive card-avatar-content">R</span>
+        </div>
+        <div class="card-content">
+          <h5>Redirect Request</h5>
+          <p><i class="fa fa-quote-left"></i>Redirect a request URL</p>
+        </div>
+      </div>
     </div>
-    <div class="panel-body">
-      Redirect a request URL
+
+    <div class="col-md-6 card-cancel-rule rule-card" data-target="#new/Cancel">
+      <div class="testimonial-card z-depth-1">
+        <div class="card-up">
+        </div>
+        <div class="avatar">
+          <span class="img-circle img-responsive card-avatar-content">C</span>
+        </div>
+        <div class="card-content">
+          <h5>Cancel Request</h5>
+          <p><i class="fa fa-quote-left"></i>Block Urls by specifying keywords or entire Urls</p>
+        </div>
+      </div>
     </div>
   </div>
 
-  <div class="panel panel-cancel-rule" data-target="#new/Cancel">
-    <div class="panel-heading">
-      <h3 class="panel-title">
-        <span>Cancel Request</span>
-      </h3>
+  <div class="row">
+    <div class="col-md-6 card-replace-rule rule-card" data-target="#new/Replace">
+      <div class="testimonial-card z-depth-1">
+        <div class="card-up">
+        </div>
+        <div class="avatar">
+          <span class="img-circle img-responsive card-avatar-content">R</span>
+        </div>
+        <div class="card-content">
+          <h5>Replace Host</h5>
+          <p><i class="fa fa-quote-left"></i>Replace parts of URL like hostname, query value</p>
+        </div>
+      </div>
     </div>
-    <div class="panel-body">
-      Cancel a request
-    </div>
-  </div>
 
-  <div class="panel panel-replace-rule" data-target="#new/Replace">
-    <div class="panel-heading">
-      <h3 class="panel-title">
-        <span>Replace Host</span>
-      </h3>
-    </div>
-    <div class="panel-body">
-      Replace host name in a URL
-    </div>
-  </div>
-
-  <div class="panel panel-headers-rule" data-target="#new/headers">
-    <div class="panel-heading">
-      <h3 class="panel-title">
-        <span>Modify Headers</span>
-      </h3>
-    </div>
-    <div class="panel-body">
-      Modify HTTP headers in request and response
+    <div class="col-md-6 card-headers-rule rule-card" data-target="#new/headers">
+      <div class="testimonial-card z-depth-1">
+        <div class="card-up">
+        </div>
+        <div class="avatar">
+          <span class="img-circle img-responsive card-avatar-content">H</span>
+        </div>
+        <div class="card-content">
+          <h5>Modify Headers</h5>
+          <p><i class="fa fa-quote-left"></i>Modify HTTP headers in request and response</p>
+        </div>
+      </div>
     </div>
   </div>
 </section>
