Issue #89: Migrate Redirect Rule Screen

--- a/src/pages/templates/CancelRuleEditor.hbs
+++ b/src/pages/templates/CancelRuleEditor.hbs
@@ -16,7 +16,7 @@
   <div class="pairs-container">
     {{#each pairs}}
       <div class="well well-sm pair-container" data-index="{{@index}}">
-        {{> SourceField RULE_OPERATORS=../RULE_OPERATORS}}
+        {{> SourceField }}
       </div>
     {{/each}}
   </div>
