--- a/src/pages/templates/partials/_SourceField.hbs
+++ b/src/pages/templates/partials/_SourceField.hbs
@@ -1,5 +1,5 @@
 <div class="source-container">
-  <span class="title">Url</span>
+  <label class="active">Source Url</label>
 
   <div class="dropdown-container">
     <div class="dropdown" data-key="source.operator">
