--- a/src/pages/templates/ReplaceRuleEditor.hbs
+++ b/src/pages/templates/ReplaceRuleEditor.hbs
@@ -10,15 +10,18 @@
     <div class="well well-sm">
       {{#each pairs}}
         <div class="pair-container" data-index="{{@index}}">
-          <div class="input-group">
+
+          <div class="input-group from-input-group">
             <span class="input-group-addon">Replace</span>
             <input type="text" class="form-control from-input" data-key="from" placeholder="This part in URL" value="{{from}}">
           </div>
-          <div class="input-group">
+
+          <div class="input-group to-input-group">
             <span class="input-group-addon">With</span>
             <input type="text" class="form-control to-input" data-key="to" placeholder="Will be replaced by this string" value="{{to}}">
           </div>
-          <span class="glyphicon glyphicon-trash delete-pair action-icon"></span>
+
+          <span class="fa fa-trash-o delete-pair action-icon"></span>
         </div>
       {{/each}}
     </div>
