Issue #89: Add form-control class to destination url in redirect rule

--- a/src/pages/templates/RedirectRuleEditor.hbs
+++ b/src/pages/templates/RedirectRuleEditor.hbs
@@ -13,7 +13,7 @@
         <div class="row">
           <div class="destination-container">
             <label class="active">Destination</label>
-            <input type="url" class="destination-url-input" data-key="destination" value="{{destination}}"
+            <input type="url" class="destination-url-input form-control" data-key="destination" value="{{destination}}"
                    placeholder="{{destinationPlaceholder}}">
           </div>
         </div>
